Fix x-overflow issue, change scrollbar design and change margin for landing in mobile view

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -324,6 +324,7 @@
 	}
 	
 	.banner-section{
+		margin-top: 80px;
 		padding:200px 0px 200px;
 	}
 	
